# convfinqa

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  README.md  pyproject.toml
.github/workflows/: lint.yaml
convfinqa/: __init__.py  __main__.py
convfinqa/dataset/: explore.py  loader.py  models.py
convfinqa/evaluation/: __init__.py  evaluator.py
convfinqa/llm/: __init__.py  client.py  openai_client.py  prompts.py
convfinqa/loggers/: __init__.py  base_logger.py  sync_logger.py
convfinqa/utils/: __init__.py  expressions.py  state_manager.py
