[project]
name = "convfinqa"
version = "0.1.0"
description = "Package to evaluate LLM's numerical reasoning on the ConvFinQA dataset."
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = []
authors = [
  { name="Shariq Farooqui", email="shariq.farooqui@outlook.com"}
]
packages = [
  { include = "convfinqa", from = "." },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py310"
extend-exclude = [
    "__init__.py",
]

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    "E", # pycodestyle
    "I", # isort
    "D", # pydocstyle
]
ignore = [
    "D100", # undocumented-public-module
    "D104", # undocumented-public-package
    "D106", # undocumented-public-nested-class
    "D107", # undocumented-public-init
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-line-length = 88

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "ruff==0.11.2",
]
